--- a/package.json
+++ b/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "fimafeng",
-  "version": "0.0.1-alpha",
-  "description": "the new version of monlycée.net-mailer",
-  "main": "mail.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "azures04",
-  "license": "MIT",
-  "dependencies": {
-    "colors": "^1.4.0",
-    "discord.js": "^14.16.3",
-    "nodemailer": "^6.9.15"
-  }
+	"displayName": "JulesFerry - Fimafeng",
+	"name": "fimafeng",
+	"version": "0.0.9",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"makeList": "node makeList",
+		"start": "node "
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jules-Ferry/JF_Cupidon.git"
+	},
+	"author": {
+		"name": "Gilles Lazure (azures04)",
+		"email": "gilleslazure04@gmail.com",
+		"url": "https://azures.fr"
+	},
+	"license": "AGPL-3.0-only",
+	"bugs": {
+		"email": "gilleslazure04@gmail.com",
+		"url": "https://github.com/jules-Ferry/JF_Cupidon/issues"
+	},
+	"homepage": "https://github.com/jules-Ferry/JF_Cupidon#readme",
+	"dependencies": {
+		"colors": "^1.4.0",
+		"discord.js": "^14.16.3",
+		"nodemailer": "^6.9.15"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.7"
+	}
 }
